# pre-commit-hooks

./: .coveragerc  .gitignore  .mypy.ini  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  Makefile  README.md  conftest.py  pyproject.toml  setup.cfg  test_requirements.txt
.github/: pull_request_template.md
.github/workflows/: coverage.yml  deploy.yml  pre-commit.yaml  python-app.yml  python_tests.yml  style.yml  tests.yml  unit_tests.yml
_shared/: resolvers.py
add_copyright_hook/: __init__.py  add_copyright.py
add_msg_issue_hook/: __init__.py  add_msg_issue.py
sort_file_contents_hook/: sort_file_contents.py
src/: __init__.py
src/_shared/: __init__.py  comment_mapping.py  config_parsing.py  copyright_parsing.py  exceptions.py  parsers.py  print_diff.py  resolvers.py  test_comment_mapping.py  test_config_parsing.py  test_copyright_parsing.py  test_exceptions.py  test_print_diff.py  test_resolvers.py
src/add_copyright_hook/: add_copyright.py  add_copyright_old.py  mapping_file_extensions_and_comments.json  test_add_copyright.py
src/add_msg_issue_hook/: __init__.py  add_msg_issue.py  test_add_msg_issue.py
src/americanise_hook/: __init__.py  americanise.py  americanise_dictionary.py
src/check_changelog_clash_hook/: __init__.py  check_changelog_clash.py
src/check_docstrings_parse_as_rst_hook/: __init__.py  check_docstrings_parse_as_rst.py
src/format_setup_cfg_hook/: __init__.py  format_setup_cfg.py
src/no_import_testtools_in_src_hook/: __init__.py  no_import_testtools_in_src.py
src/sort_file_contents_hook/: __init__.py  sort_file_contents.py  test_sort_file_contents.py
src/update_copyright_hook/: __init__.py  test_update_copyright.py  update_copyright.py
strict_tdd/: strict_tdd.py
strict_tdd_hook/: strict_tdd.py
tests/: __init__.py  conftest.py  test_add_msg_issue.py
tests/add_copyright_hook/: test_integration_add_copyright.py  test_system_add_copyright.py  test_unit_add_copyright.py  test_unit_parsed_copyright_string.py
tests/add_copyright_hook/integration/: test_add_copyright.py
tests/add_copyright_hook/system/: test_add_copyright.py
tests/add_copyright_hook/unit/: test_add_copyright.py
tests/add_msg_issue_hook/: test_add_msg_issue_system.py  test_add_msg_issue_unit.py  test_integration_add_msg_issue.py  test_unit_add_msg_issue.py
tests/add_msg_issue_hook/integration/: __init__.py  test_add_msg_issue.py
tests/add_msg_issue_hook/system/: test_add_msg_issue.py
tests/add_msg_issue_hook/unit/: test_add_msg_issue.py
tests/americanise_hook/: test_integration_americanise.py  test_system_americanise.py  test_unit_americanise.py
tests/check_changelog_clash_hook/: test_integration_check_changelog_clash.py  test_unit_check_changelog_clash.py
tests/check_docstrings_parse_as_rst_hook/: test_integration_check_docstrings_parse_as_rst.py  test_system_check_docstrings_parse_as_rst.py
tests/examples/: invalid_rst_python.py  no_docstrings.py  setup_cfg_examples.py  valid_rst_python.py
tests/format_setup_cfg_hook/: test_integration_format_setup_cfg.py  test_system_format_setup_cfg.py
tests/no_import_testtools_in_src_hook/: test_integration_no_import_testtools.py  test_system_no_import_testtools.py  test_unit_no_import_testtools.py
tests/shared/: test_integration_comment_mapping.py  test_integration_config_parsing.py  test_integration_parsers.py  test_unit_comment_mapping.py  test_unit_config_parsing.py  test_unit_copyright_parsing.py  test_unit_exceptions.py  test_unit_print_diff.py  test_unit_resolvers.py
tests/shared/unit/: test_resolvers.py
tests/sort_file_contents_hook/: test_integration_sort_file_contents.py  test_system_sort_file_contents.py  test_unit_sort_file_contents.py
tests/sort_file_contents_hook/integration/: test_sort_file_contents.py
tests/sort_file_contents_hook/system/: test_sort_file_contents.py
tests/sort_file_contents_hook/unit/: __init__.py  test_sort_file_contents.py
tests/sort_gitignore_hook/unit/: test_sort_gitignore.py
tests/strict_tdd/: test_strict_tdd_system.py
tests/strict_tdd_hook/: test_strict_tdd_system.py  test_strict_tdd_unit.py
tests/update_copyright_hook/: test_integration_update_copyright.py  test_system_update_copyright.py  test_unit_update_copyright.py
