[tool.poetry]
name = "add_msg_issue_hook"
version = "v1.0.2"
description = ""
authors = ["Benjamin Mummery <benjamin.mummery@zapatacomputing.com>"]

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]
pytest = "^5.0.0"

[tool.poetry.scripts]
add-msg-issue = "add_msg_issue_hook.add_msg_issue:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
