########## PROJECT SETUP ##########
[project]
name = "pre-commit-hooks"
dynamic = ["version"]
authors=[
    {name = "Benjamin Mummery", email="benjamin.mummery13@gmail.com"}
]
description = "A selection of quality-of-life tools for use with pre-commit."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "gitpython>=3.1.46",
    "identify>=2.6.1",
    "path>=17.0.0",
    "pyyaml>=6.0.3",
    "restructuredtext-lint>=2.0.2",
    "tomli>=2.4.0",
]

[dependency-groups]
dev = [
    "flake8>=5.0.4",
    "python-semantic-release>=10.5.3",
    {include-group = "test"},
]
test = [
    "freezegun>=1.5.5",
    "pre-commit>=3.5.0",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "pytest-git>=1.8.0",
    "pytest-mock>=3.14.1",
]

[project.scripts]
add-copyright = "src.add_copyright_hook.add_copyright:main"
add-msg-issue = "src.add_msg_issue_hook.add_msg_issue:main"
sort-file-contents = "src.sort_file_contents_hook.sort_file_contents:main"
update-copyright = "src.update_copyright_hook.update_copyright:main"
no-import-testtools-in-src = "src.no_import_testtools_in_src_hook.no_import_testtools_in_src:main"
americanise = "src.americanise_hook.americanise:main"

########## BUILD SYSTEM CONFIGURATION ##################################################

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "src.__version__"}

[tool.setuptools.packages]
find = {}

[tool.distutils.bdist_wheel]
universal = true

########## TESTING TOOL CONFIGURATION ##################################################

[tool.pytest]
addopts = [
    "--doctest-modules",
    "--strict-markers",
    "--cov=src",
    "--cov-fail-under=98",
]

########## LINTING AND FORMATTING TOOL CONFIGURATION ###################################

[tool.mypy]
exclude = "tests/"
warn_unused_configs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module="tests.*"
ignore_errors = true

[tool.interrogate]
ignore-init-method = true
fail-under = 100
verbose = 2
ignore_magic = true

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["F", "I"]

[tool.ruff.lint.isort]
lines-between-types = 1

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

########## RELEASE TOOLS ##########

[tool.semantic_release]
assets = []
commit_message = "build: {version}\n\nAutomatically generated by python-semantic-release"
commit_parser = "angular"
logging_use_named_masks = false
major_on_zero = true
tag_format = "v{version}"
version_variables = ["src/__init__.py:__version__"]

[tool.semantic_release.branches.main]
match = "(main|master|release)"
prerelease_token = "rc"
prerelease = false

[tool.semantic_release.changelog]
template_dir = "templates"
changelog_file = "CHANGELOG.md"
exclude_commit_patterns = []

[tool.semantic_release.changelog.environment]
block_start_string = "{%"
block_end_string = "%}"
variable_start_string = "{{"
variable_end_string = "}}"
comment_start_string = "{#"
comment_end_string = "#}"
trim_blocks = false
lstrip_blocks = false
newline_sequence = "\n"
keep_trailing_newline = false
extensions = []
autoescape = true

[tool.semantic_release.commit_author]
env = "GIT_COMMIT_AUTHOR"
default = "semantic-release <semantic-release>"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "style", "refactor", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.remote]
name = "origin"
type = "github"
ignore_token_for_push = false

[tool.semantic_release.remote.token]
env = "GH_TOKEN"

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = true

