[metadata]
name = pre_commit_hooks
version = 1.1.0
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BenjaminMummery/pre-commit-hooks
author = Benjamin Mummery
author_email = benjamin.mummery@zapatacomputing.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
python_requires = >=3.5.1
install_requires =
    gitpython >= 3.1.31
    pyyaml >= 5.4.1

[options.entry_points]
console_scripts =
    add-copyright = add_copyright_hook.add_copyright:main
    add-msg-issue = add_msg_issue_hook.add_msg_issue:main
    sort-file-contents = sort_file_contents_hook.sort_file_contents:main

[options.packages.find]
exclude =
    tests*
    testing*

[bdist_wheel]
universal = True

[coverage.run]
omit =
    '__init__.py'
